# BP-work-server

./: .gitignore  LICENSE  README.md  launch.ps1  pyproject.toml
.github/workflows/: deploy.yml
bp_work_server/: __init__.py  api.py  cli.py  client.py  decomp.py  github.py  models.py  store.py  sync.py
bp_work_server/routes/: dashboard.py  work.py
bp_work_server/services/: attribution.py  dashboard.py
bp_work_server/static/: app.css  app.js  index.html
docs/: protocol.md
tests/: test_api.py  test_auth.py  test_github.py  test_store.py
